--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">iDaBere</string>
+    <string name="title_activity_login">Autenticazione</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Entra</string>
+    <string name="action_register">Registrati</string>
+    <string name="error_invalid_email">Indirizzo email invalido</string>
+    <string name="error_incorrect_password">Password incorretta</string>
+    <string name="error_field_required">Il campo non deve essere vuoto</string>
+
 </resources>
