--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="title_qr_scanner_icon">Scan QR code</string>
     <string name="title_burger_menu_icon">Menu</string>
 
+    <string name="search_bar_label">Search bar icon</string>
+    <string name="search_hint">Cerca Ristorante</string>
+
 </resources>
