add categories_expandable_list_view. set cards as its items

--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -13,11 +13,11 @@
 
     <!-- Strings related to menu -->
 
-    <!-- Strings related to item list menu-->
     <string name="search_list_item_icon_label">Cerca Ordine</string>
     <string name="random_list_item_icon_label">Ordine Random</string>
+    <string name="add_new_drink_button">Nuova Scelta</string>
 
-
+    <string name="category_name">Categoria</string>
 
 
     <!-- Strings samples -->
