--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -51,5 +51,12 @@
 
     <!-- Strings related to Add Toppings -->
     <string name="add_toppings_modal_title">Nuovo Elemento</string>
+    <string name="sizes_label_title">Dimensione</string>
+    <string name="toppings_label_title">Aggiunte</string>
+
+    <!-- Default sizes -->
+    <string name="drinks_measure_units">cl</string>
+    <string name="small_size_label">25</string>
+
 
 </resources>
