--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="add_toppings_modal_title">Nuovo Elemento</string>
     <string name="sizes_label_title">Dimensione</string>
     <string name="toppings_label_title">Aggiunte</string>
+    <string name="add_topping_button_label">Aggiungi</string>
+    <string name="cancel_topping_button_label">Annulla</string>
 
     <!-- Default sizes -->
     <string name="drinks_measure_units">cl</string>
