--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="table_radio_button_label">Tavolo</string>
 
     <!-- Strings related to Review order -->
+    <string name="review_order_activity_title">Carrello</string>
     <string name="title_delivery_place">Consegna</string>
     <string name="title_menu_list">Menu</string>
 
