--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">iDaBere</string>
 
     <!-- Strings samples -->
+    <string name="bar_list_bar_name">Bar name</string>
     <string name="menu_list_item_name">Item name</string>
     <string name="menu_list_item_price">3.50</string>
     <string name="menu_list_item_currency">$</string>
