--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -26,8 +26,9 @@
     <string name="error_incorrect_password">Password incorretta</string>
     <string name="error_field_required">Il campo non deve essere vuoto</string>
 
-    <!-- Strings related to seach bar -->
-    <string name="title_activity_seach_bar">SeachBarActivity</string>
+    <!-- Strings related to list bar -->
+    <string name="title_activity_seach_bar">Ricerca Locale</string>
+    <string name="closed_title_label">CHIUSO</string>
 
     <!-- Strings related to seach bar menu-->
     <string name="title_menu_seach_bar_icon">Cerca per nome</string>
