--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -67,12 +67,12 @@
     <!-- Strings related to GPS Loading -->
     <string name="gps_loading_menu_label">Caricamento</string>
 
-    <!-- Strings related to Add Toppings -->
-    <string name="add_toppings_modal_title">Nuovo Elemento</string>
+    <!-- Strings related to Add Choice -->
+    <string name="add_chioce_modal_title">Nuovo Elemento</string>
     <string name="sizes_label_title">Dimensione</string>
-    <string name="toppings_label_title">Aggiunte</string>
-    <string name="add_topping_button_label">Aggiungi</string>
-    <string name="cancel_topping_button_label">Annulla</string>
+    <string name="additions_label_title">Aggiunte</string>
+    <string name="add_choice_button_label">Aggiungi</string>
+    <string name="cancel_choice_button_label">Annulla</string>
 
     <!-- Default sizes -->
     <string name="drinks_measure_units">cl</string>
