--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     <string name="additions_label_title">Aggiunte</string>
     <string name="add_choice_button_label">Aggiungi</string>
     <string name="cancel_choice_button_label">Annulla</string>
+    <string name="no_choice_description">Nessuna aggiunta</string>
 
     <!-- Default sizes -->
     <string name="drinks_measure_units">cl</string>
