--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="add_choice_button_label">Aggiungi</string>
     <string name="cancel_choice_button_label">Annulla</string>
     <string name="no_choice_description">Nessuna aggiunta</string>
+    <string name="remove_choice_button_label">Rimuovi</string>
 
     <!-- Default sizes -->
     <string name="drinks_measure_units">cl</string>
