finish check out activity data fill. add some layout refactoring

--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
 
     <!-- Strings related to Delivery Place -->
     <string name="title_delivery_place_activity_title">Consegna</string>
-    <string name="delivery_place_info">Seleziona il metodo di consegna ordinazione</string>
+    <string name="delivery_place_info">Seleziona il metodo di consegna</string>
     <string name="counter_radio_button_label">Bancone</string>
     <string name="counter_place_info">Quando il tuo ordine sarà pronto verrà servito al bancone specificato</string>
     <string name="counter_choice_label">Posizione bancone:</string>
