--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -120,5 +120,7 @@
     <string name="permission_denied_explanation">Sono necessari i permessi per utilizzare i dati dal GPS</string>
     <string name="settings">Impostazioni</string>
     <string name="internet_permission_rationale">Sono necessari i permessi di connessione abilitati</string>
+    <string name="bar_list_bar_details">via Milano , 56</string>
+    <string name="bar_distance_value">130m</string>
 
 </resources>
