--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="title_activity_checkout">Checkout</string>
     <string name="title_payment_type">Pagamento</string>
     <string name="title_total_price">Totale</string>
-    <string name="title_confirm_payment">Concludi</string>
+    <string name="title_confirm_payment">Conferma</string>
 
     <!-- Strings related to GPS Loading -->
     <string name="gps_loading_menu_label">Caricamento</string>
