--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -127,5 +127,8 @@
     <string name="preferreds_category_name">Preferiti</string>
     <string name="wait_order_message">E\' necessario attendere che l\'ordine venga consegnato</string>
     <string name="no_connection_text">Abilitare una connessione dati</string>
+    <string name="list_bar_activity_name">Ricerca Locale</string>
+    <string name="login_text_button">Autenticati</string>
+    <string name="proceed_order_button">Ordina</string>
 
 </resources>
