--- a/iDaBere/app/src/main/res/values/strings.xml
+++ b/iDaBere/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
     <string name="server_error_text">Si è verificato un errore.\n Riprovare più tardi</string>
     <string name="no_data_error_text">Nessun risultato trovato</string>
     <string name="order_status_current_title">STATO DELL\'ORDINE</string>
-    <string name="greetings_message">La tua ordinazione e conclusa.\n Grazie per aver usato iDaBere!</string>
+    <string name="greetings_message">La tua ordinazione è conclusa.\n Grazie per aver usato iDaBere!</string>
     <string name="finish_button">Torna al Menu</string>
     <string name="credits_title">Credits</string>
 
